# f8_cuda

./: .gitignore  CMakeLists.txt  Makefile  README.md  cudaLog.txt  err_test.cu  launch_cluster.cu  test_kernel.cu  vecAdd_unifiedMemory.cu
cuda_py/: main.py  pyproject.toml
